# aws-activate-bedrock-models

./: main.py  pyproject.toml
src/: bedrock_model_activator.py  main.py
