[project]
name = "aws-activate-bedrock-models"
version = "0.1.0"
description = "Activate AWS Bedrock foundation models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.46",
]

[project.scripts]
aws-activate-bedrock-models = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
